fix alignment of hero image

--- a/app/assets/stylesheets/layouts/_campaigns.scss
+++ b/app/assets/stylesheets/layouts/_campaigns.scss
@@ -4,6 +4,7 @@
 }
 
 .l-campaigns__hero {
+  @include column(12);
   background: $white;
   height: 0;
   padding-bottom: 32.7288%;
